# cds

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  start-daemon.sh
.github/workflows/: ci.yml  release.yml
assets/: cds-demo.mov
migrations/: 0001_create_index_schema.sql  0002_create_chunk_history.sql  0003_index_chunk_history_modified_time.sql  0004_create_index_metadata.sql  0005_create_directory_visits.sql  0006_create_file_chunk_vector_refs.sql
src/: cli.rs  error.rs  lib.rs  main.rs
src/app/: error.rs  mod.rs
src/config/: error.rs  mod.rs  paths.rs  settings.rs
src/db/: document.rs  error.rs  mod.rs  schema.rs  vector.rs
src/embed/: bge.rs  error.rs  fake.rs  mod.rs
src/index/: classify.rs  error.rs  file.rs  mod.rs  progress.rs  scanner.rs  summary.rs
src/index/directory_types/: android.json  astro.json  chrome_extension.json  django.json  docker.json  dotnet.json  go.json  ios.json  java.json  kubernetes.json  laravel.json  migrations.json  monorepo.json  next.json  node.json  python.json  rails.json  react.json  rust.json  sveltekit.json  terraform.json  vite.json
src/search/: error.rs  mod.rs
tests/: docker_cd_equivalence.rs  docker_cd_equivalence.sh  install_script.rs  search_integration.rs  shell_integration.rs
