[package]
name = "cds"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
color-eyre = "0.6.5"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.20.0"
