[package]
name = "cds"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
color-eyre = "0.6.5"
fastembed = { version = "5.15.0", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.20.0"
